--- a/build.gradle
+++ b/build.gradle
@@ -176,6 +176,10 @@ dependencies {
     // For more info:
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
+
+
+    // other dependency:
+    implementation 'org.tensorflow:tensorflow-lite:2.10.0'
 }
 
 // This block of code expands all declared replace properties in the specified resource targets.
